# weather

./: .gitignore  CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt
lib/ParserAPI/: ParserAPI.cpp  ParserAPI.h
lib/ParserJSON/: ArgumentJSON.cpp  ArgumentJSON.h  ParserJSON.cpp  ParserJSON.h
lib/ParserWeather/: ParserWeather.cpp  ParserWeather.h
lib/PrintConsole/: PrintConsole.cpp  PrintConsole.h
